tests/expectations/parser/functions/annotated_arg_not_ident_fail.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected 'function', 'transition', or 'inline' -- found '('
    --> test:4:9
     |
   4 |     @foo(?, bar, ?)
     |         ^"""]
